Changes from version 1.3.5 to 1.3.6
 * Fixed a bug regarding graphs where no edges had the 'description' attribute.

Changes from version 1.3.4 to 1.3.5
 * Added a new identification algorithm. This can be enabled via the new 'prune' argument in the 'causal.effect' function. Examples on usage can be found in the documentation for the 'causal.effect' function.

Changes from version 1.3.3 to 1.3.4
 * Updated vignettes.
 * Fixed an issue with identification.
 * Fixed an issue with simplification where expressions were not being simplified even when it was feasible.

Changes from version 1.3.2 to 1.3.3
 * Updated citation.
 * Disabled causal effect simplification by default.

Changes from version 1.3.1 to 1.3.2
 * Added a new parameter called 'primes' which can be used to separate summation variables from other variables in the expressions.
 * Added a new function to derive Verma constraints.
 * Cleaner output for aux.effect and transport functions.

Changes from version 1.3.0 to 1.3.1
 * Fixed some bugs in identification and transportability derivations.

Changes from version 1.2.4 to 1.3.0
 * Now implements a transportability algorithm from multiple domains with limited experiments. This function replaces the following functions: 'aux.effect', 'transport' and 'meta.transport'. These functions can still be called and they serve as wrappers for the new function 'generalize'.
 * Now implements a selection bias recovery algorithm in the function 'recover'.
 * Added vignette for the simplification procedure.
 * Fixed several bugs related to the simplification procedure.

Changes from version 1.2.3 to 1.2.4
 * Fixed an issue regarding the simplification of conditional causal effects.

Changes from version 1.2.2 to 1.2.3
 * Fixed an issue in the simplification procedure.

Changes from version 1.2.1 to 1.2.2
 * Added package vignette. Updated the simplification procedure to handle more situations.

Changes from version 1.2.0 to 1.2.1