@@ -1,6 +1,6 @@
 Package: causaleffect
 Version: 1.3.6
-Date: 2017-10-03
+Date: 2018-01-18
 Title: Deriving Expressions of Joint Interventional Distributions and Transport Formulas in Causal Models
 Author: Santtu Tikka
 Maintainer: Santtu Tikka <santtuth@gmail.com>
