@@ -1,5 +1,6 @@
 Changes from version 1.3.5 to 1.3.6
- * Fixed a bug regarding graphs where no edges had the 'description' attribute.
+ * Fixed a bug regarding graphs where zero edges had the 'description' attribute.
+ * Fixed a bug when attempting to simplify conditional causal effects.
 
 Changes from version 1.3.4 to 1.3.5
  * Added a new identification algorithm. This can be enabled via the new 'prune' argument in the 'causal.effect' function. Examples on usage can be found in the documentation for the 'causal.effect' function.
